# pg_cdc_datalake

./: .clang-format  .dockerignore  .gitignore  AI_HANDOFF.md  CMakeLists.txt  DESIGN.md  Dockerfile  README.md  analytics.py  cdc_data_lake.conf  delta_compact.py  metrics  native_delta_analytics.py  roadmap.md  run_test.sh  setup_100_products.py  simulate_ecommerce.py  spark_analytics.py  spark_merge.py  stream_50_products.py  test_deltalake.py  test_e2e.py
.agents/: AGENTS.md
.github/workflows/: ci.yml
dashboard/: app.js  index.html  style.css
examples/: analytics.py  inspect_parquet.py  native_delta_analytics.py  spark_analytics.py  spark_merge.py
include/: config.h  metrics.h  wal_receiver.h  web_server.h
src/: checkpoint.cpp  checkpoint.h  config.cpp  config.h  logger.cpp  logger.h  logical_decoder.cpp  logical_decoder.h  main.cpp  parquet_writer.cpp  parquet_writer.h  pg_setup.cpp  pg_setup.h  ring_buffer.h  snapshot_manager.cpp  snapshot_manager.h  types.h  wal_receiver.cpp  wal_receiver.h  web_server.cpp
tests/: conftest.py  run_test.sh  setup_100_products.py  simulate_ecommerce.py  stream_50_products.py  test_pipeline.py
